--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 #tabs-top a{
     float: left;
     display: block;
-    width: 50%;
+    width: 100%;
     height: 35px;
     font-weight: 700;
     color: white;
@@ -47,6 +47,27 @@ body{
 
 #main-home{
        margin-top: 120px;
+}
+#tabs-bottom{
+      position : fixed;
+      bottom   : 0;
+      left     : 0;
+      z-index  : 500;
+      width    : 100%;
+      height   : 40px;
+      background-color: black;
+}
+
+#tabs-bottom a{
+     float : left;
+     display : block;
+     width : 100%;
+     height : 35px;
+     font-weight : 700;
+     color       : white;
+     text-align  : center;
+     text-decoration : none;
+     padding-top     : 12px;
 }
 
 #info-box-full{
